botão para chamar e alimentar o modal

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,6 @@
     </head>
 
     <body>
-
+        <button type="button" class="btn btn-block btn-success">Alimentar Modal</button>
     </body>
 </html>
