--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 <html>
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script type="text/javascript" src="../js/chamar-modal.js"></script>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
     </head>
 
     <body>
@@ -20,9 +19,7 @@
 
         
 
-        <div
-        id="modal_de_imagens" class="modal fade"
-        role="dialog" tabindex="-1" data-backdrop="static">
+        <div id="modal_de_imagens" class="modal fade" role="dialog" tabindex="-1" data-backdrop="static">
             <div class="modal-dialog modal-lg">
 
                 <div class="modal-content">
@@ -31,18 +28,23 @@
                     </div>
                     
                     <div class="modal-body">
-                        
-                        
+                        <div id="div_imagens">
+                            
+                        </div>
                     </div>
 
                     <div class="modal-footer">
-                        <button id="fechar_modal_galeria_foto_upload_pessoa" name="fechar_modal_resultado_pesquisa_envolvidos_peca" type="button"
+                        <button id="fechar_modal_de_imagens" name="fechar_modal_de_imagens" type="button"
                             class="btn btn-default" data-dismiss="modal">Fechar</button>
 
                     </div>
                 </div>
             </div>
-</div>
+        </div>
 
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="../js/alimentar-modal.js"></script>
     </body>
 </html>
