carregar as imagens ao chamar o modal

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,13 @@
             <div class="card-body">
                 <h5 class="card-title">Algumas imagens serão exibidas no modal</h5>
                 <p class="card-text">Clique no botão abaixo para alimentar o modal.</p>
-                <a id="button_alimentar_modal" href="#" class="btn btn-primary">Alimentar Modal</a>
+                <a id="button-alimentar-modal" href="#" class="btn btn-primary">Alimentar Modal</a>
             </div>
         </div>
 
         
 
-        <div id="modal_de_imagens" class="modal fade" role="dialog" tabindex="-1" data-backdrop="static">
+        <div id="modal-de-imagens" class="modal fade" role="dialog" tabindex="-1" data-backdrop="static">
             <div class="modal-dialog modal-lg">
 
                 <div class="modal-content">
@@ -28,13 +28,13 @@
                     </div>
                     
                     <div class="modal-body">
-                        <div id="div_imagens">
+                        <div id="div-imagens">
                             
                         </div>
                     </div>
 
                     <div class="modal-footer">
-                        <button id="fechar_modal_de_imagens" name="fechar_modal_de_imagens" type="button"
+                        <button id="fechar-modal-de-imagens" name="fechar-modal-de-imagens" type="button"
                             class="btn btn-default" data-dismiss="modal">Fechar</button>
 
                     </div>
