--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,9 @@
+<!-- HTML5 -->
+<meta charset="utf-8"/>
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
 
     <body>
@@ -12,8 +14,11 @@
             </div>
             <div class="card-body">
                 <h5 class="card-title">Algumas imagens serão exibidas no modal</h5>
-                <p class="card-text">Clique no botão abaixo para alimentar o modal.</p>
-                <a id="button-alimentar-modal" href="#" class="btn btn-primary">Alimentar Modal</a>
+                <p class="card-text">Clique em um dos botões abaixo para alimentar o modal.</p>
+                <a id="button-alimentar-modal-arquivo-imagem" href="#" class="btn btn-outline-primary" title="Alimentar modal carregando arquivos de imagem"> 
+                    <i class="fa fa-image"></i></a>
+                <a id="button-alimentar-modal-codigo-base64" href="#" class="btn btn-outline-primary" title="Alimentar modal a partir do código em Base64">
+                    <i class="fa fa-file"></i></a>
             </div>
         </div>
 
