--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-/*Downloaded from https://www.codeseek.co/kosukehorai/bootstrap-image-checkbox-multiple-pRwKjg */
 .nopad {
 	padding-left: 0 !important;
 	padding-right: 0 !important;
@@ -22,6 +21,7 @@
 .image-checkbox-checked {
 	border-color: #4783B0;
 }
+
 .image-checkbox .fa {
   position: absolute;
   color: #4A79A3;
@@ -30,6 +30,16 @@
   top: 0;
   right: 0;
 }
+
 .image-checkbox-checked .fa {
   display: block !important;
 }
+
+.image-parent {
+	max-width: 150px;
+}
+
+/*#div-card-animes-favoritos {
+	height:850px;
+	overflow-y: scroll;
+}*/
