adicionando selaçao dos animes com radio-button

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/style.css">
+
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 
 <body>
@@ -30,6 +32,9 @@
                     <a id="button-alimentar-modal-imagem-checkbox" href="#" class="btn btn-outline-primary"
                         title="Alimentar modal com imagens checkbox">
                         <i class="fa fa-check-circle"></i></a>
+                    <a id="button-alimentar-modal-imagem-radio" href="#" class="btn btn-outline-primary"
+                        title="Alimentar modal com imagens radio-button">
+                        <i class="far fa-dot-circle"></i></a>
                 </div>
             </div>
         </div>
@@ -61,8 +66,8 @@
 
         <div id="div-card-animes-favoritos" class="col-lg-6" style="display: none;">
             <div class="card">
-                <div class="card-header">
-                    <strong>Seus animes favoritos são</strong>
+                <div id="div-card-header-animes-favoritos" class="card-header">
+                    
                 </div> 
 
                 <div class="modal-body">
