--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,29 @@
 	outline: 0;
 }
 
+.image-radio {
+	cursor: pointer;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	border: 4px solid transparent;
+	margin-bottom: 0;
+	outline: 0;
+}
+
 .image-checkbox input[type="checkbox"] {
 	display: none;
 }
 
+.image-radio input[type="radio"] {
+	display: none;
+}
+
 .image-checkbox-checked {
+	border-color: #4783B0;
+}
+
+.image-radio-checked {
 	border-color: #4783B0;
 }
 
@@ -31,8 +49,21 @@
   right: 0;
 }
 
+.image-radio .fa {
+	position: absolute;
+	color: #4A79A3;
+	background-color: #fff;
+	padding: 10px;
+	top: 0;
+	right: 0;
+}
+
 .image-checkbox-checked .fa {
   display: block !important;
+}
+
+.image-radio-checked .fa {
+	display: block !important;
 }
 
 .image-parent {
